objects/Engagement_A4S_Behavioral_Event_2C796639__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_eventId__c</fullName>
        <label>KQ_eventId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_BrowserName__c</fullName>
        <label>Browser Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_BrowserRenderEngine__c</fullName>
        <label>Browser Render Engine</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_BrowserVendor__c</fullName>
        <label>Browser Vendor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_BrowserVersion__c</fullName>
        <label>Browser Version</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_DeviceManufacturer__c</fullName>
        <label>Device Manufacturer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_DeviceModel__c</fullName>
        <label>Device Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_DeviceType__c</fullName>
        <label>Device Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_IsBrowser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Browser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cdp_sys_OSFamily__c</fullName>
        <label>OS Family</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_OSVendor__c</fullName>
        <label>OS Vendor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_OSVersion__c</fullName>
        <label>OS Version</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_PartitionDate__c</fullName>
        <label>cdp_sys_PartitionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_UserAgent__c</fullName>
        <label>User Agent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateTime__c</fullName>
        <label>dateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>deviceId__c</fullName>
        <label>deviceId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventId__c</fullName>
        <label>eventId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventType__c</fullName>
        <label>eventType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sessionId__c</fullName>
        <label>sessionId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_domainName__c</fullName>
        <label>domainName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_engagementActionReason__c</fullName>
        <label>engagementActionReason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_engagementChannel__c</fullName>
        <label>engagementChannel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_entityId__c</fullName>
        <label>entityId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_entityType__c</fullName>
        <label>entityType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_interactionName__c</fullName>
        <label>interactionName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_isPageView__c</fullName>
        <label>isPageView</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_pageName__c</fullName>
        <label>pageName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_pageUrl__c</fullName>
        <label>pageUrl</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_previousPageUrl__c</fullName>
        <label>previousPageUrl</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_userAgent__c</fullName>
        <label>userAgent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_userId__c</fullName>
        <label>userId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEngagement_visitStartTime__c</fullName>
        <label>visitStartTime</label>
        <type>DateTime</type>
    </fields>
</CustomObject>